--- a/eBay/test-output/emailable-report.html
+++ b/eBay/test-output/emailable-report.html
@@ -31,14 +31,17 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">16.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Validating Home Page</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">110.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">com.qa.OrderPlace.eBay.SignIn</td><td><a href="#m1"><b>signIn</b>  </a></td><td class="numi">1</td><td>1596592997335</td><td class="numi">16280</td></tr>
+<tr><th colspan="4">Validating Home Page &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">com.qa.OrderPlace.eBay.HomePageLogin</td><td><a href="#m1"><b>signIn</b>  </a></td><td class="numi">1</td><td>1606180873618</td><td class="numi">56451</td></tr>
+<tr class="passedeven"><td rowspan="1">com.qa.OrderPlace.eBay.AddToCart</td><td><a href="#m2"><b>addCart</b>  </a></td><td class="numi">1</td><td>1606180930134</td><td class="numi">11392</td></tr>
 </table>
-<h1>Default test</h1>
-<h2 id="m1">com.qa.OrderPlace.eBay.SignIn:signIn</h2>
+<h1>Validating Home Page</h1>
+<h2 id="m1">com.qa.OrderPlace.eBay.HomePageLogin:signIn</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">com.qa.OrderPlace.eBay.AddToCart:addCart</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
