--- a/eBay/test-output/old/Default suite/classes.html
+++ b/eBay/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.OrderPlace.eBay.SignIn</td>
+<td>com.qa.OrderPlace.eBay.HomePageLogin</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
